--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,27 +7,19 @@ disqus:
 google-ID: 'UA-91332049-1'
 
 menu: 
-  - name: Featured Projects
-    submenu:
-      - name: MicroBam
-        link: /projects/microbam
-      - name: OurLegacy
-        link: /projects/ourlegacy
-  - name: Posts
+#  - name: Featured Projects
+ #   submenu:
+  #    - name: MicroBam
+   #     link: /projects/microbam
+    #  - name: OurLegacy
+     #   link: /projects/ourlegacy
+  - name: Home
     link: /
-  - name: Tags
-    link: /tags
-  - name: About
-    link: /about
-  - name: Follow me
-    submenu:
-      - name: GitHub
-        icon: github
-        link: http://github.com/alainpham
-      - name: LinkedIn
-        icon: linkedin-square
-        link: http://www.linkedin.com/in/alainpham
-      - name: Twitter
-        icon: twitter
-        link: https://twitter.com/koint
-    
+  - name: Blog
+    link: /blog
+  - name: Resources
+    link: /resources
+  - name: Services
+    link: /services
+  - name: Contact  
+    link: /contact
