--- a/_config.yml
+++ b/_config.yml
@@ -1,43 +1,31 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: Mine Reclamation and Closure
 name: Mine Reclamation and Closure
-description: 
+description: >
   This is a page and blog about all things mine reclamation and closure, life-of mine reclamation and closure cost estimates, financial assurance estimates (bonds), and asset retirement obligation estimates for mining.
-url: "https://pitsunda.github.io"
-baseurl: "" # the subpath of your site, e.g. /blog
-github_username:  pitsunda
+url: "https://pitsunda.github.io"  # the base hostname & protocol for your site
+baseurl: ""  # the subpath of your site, e.g. /blog if your blog is not at the root of your site
 
-# jekyll-paginate configuration
-paginate: 10
+github_username: pitsunda
 
 # Build settings
 markdown: kramdown
-#theme: minima
+theme: minima  # Uncomment this if you want to use the minima theme, or specify another theme
 plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-paginate
+
+# jekyll-paginate configuration
+paginate: 10  # Posts per page
+paginate_path: "/blog/page:num/"  # Paginate path, ensure this matches the structure of your blog URLs
+
 exclude:
   - Gemfile
   - Gemfile.lock
-include: ["_pages"]
-permalink: /posts/:title/
-excerpt_separator: <!--more-->
-author: https://www.linkedin.com/in/filiz-t-3a309442/
 
-host: 0.0.0.0
+permalink: /posts/:title/  # Permalinks pattern for posts
+excerpt_separator: <!--more-->  # Separator for excerpts
+author: https://www.linkedin.com/in/filiz-t-3a309442/  # Author information
 
+# Additional configurations
+host: 0.0.0.0  # Host IP for the Jekyll server (used when serving the site locally)
