--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,8 +15,8 @@ menu:
      #   link: /projects/ourlegacy
   - name: Home
     link: /
-  - name: Blog
-    link: /blog
+  - name: 5W1H
+    link: /5w1h
   - name: Resources
     link: /resources
   - name: Services
